# bpp

./: .gitignore  .travis.yml  ChangeLog.md  README.md
.github/workflows/: build-macos.yml
bpp_popsize_test/: SUMMARY.md
data/anopheles/: README.md  bpp.ctl
data/frogs/: A00.bpp.ctl  A01.bpp.ctl  A10.bpp.ctl  A11.bpp.ctl
data/yeast/: README.md
data/yu2001/: yu2001.bpp.ctl
docs/: rjmcmc_migration_notes.md
examples/anopheles/: anopheles-bpp-im.ctl  anopheles-bpp-msci.ctl  anopheles-bpp-mscm.ctl  bpp.ctl
examples/frogs/: A00.bpp.ctl  A01.bpp.ctl  A10.bpp.ctl  A11.bpp.ctl  frogs.Imap.txt
examples/mammoth/: mammoth.ctl  mammoth_nuclear.txt
examples/yeast/: Rokas2003-5species-bpp-im.ctl  Rokas2003-5species-bpp-msci.ctl  Rokas2003-5species-bpp-mscm.ctl  Rokas2003-5species-bpp.ctl
examples/yu2001/: README.md  yu2001.bpp.ctl
src/: Makefile  Makefile.ARM64  Makefile.MSC  Makefile.VC  Makefile.ppc64le  a1b1.c  alignment.c  allfixed.c  ancestry.c  arch.c  bfdriver.c  bpp.c  bpp.h  cfile.c  cfile_sim.c  compress.c  constraint.c  core_likelihood.c  core_likelihood_avx.c  core_likelihood_avx2.c  core_likelihood_neon.c  core_likelihood_sse.c  core_partials.c  core_partials_avx.c  core_partials_avx2.c  core_partials_neon.c  core_partials_sse.c  core_pmatrix.c  debug.c  delimit.c  diploid.c  dlist.c  dump.c  experimental.c  gamma.c  getopt_win.h  gtree.c  hardware.c  hash.c  lex_map.c  (+56 more)
test/: regen.py  runtest.py
test/anna/: datesIM.txt  dates_sim.txt  dates_sim2.txt  dates_sim2phase.txt  dates_sim3.txt  dates_sim4.txt  runTest.sh  simple.ctl  simple2.ctl  simple2phase.ctl  simple3.ctl  simple4.ctl  simpleIM.ctl  testProgram.R  testingIM.R
test/anna/mig/: runTest.sh
test/anna/mig/IM1/: datesIM2.txt  simpleIM2.ctl
test/anna/mig/IM2/: datesIM2.txt  simpleIM2.ctl
test/anna/mig/IM3/: simpleIM2.ctl
test/anna/mig/IM4/: datesIM2.txt  simpleIM2.ctl
test/anna/parseGtree/: compare_tree.c  dna_sim.h  dna_sim_functions.c  makefile  sasprintf.c
test/anna/testInference/gtrees/test1/: simple.ctl  simpleInference.ctl  summarizeGeneTrees.sh  test1.R
test/anna/testInference/gtrees/test2/: dates.txt  simple2.ctl  simpleInference2.ctl  summarizeGeneTrees.sh  test2.R
test/anna/testInference/gtrees/test3/: dates.txt  simple2.ctl  simpleInference2.ctl  summarizeGeneTrees.sh  test3.R
test/anna/testInference/larger_tree/: dates.txt  realTimeSeqDates.txt  simple.ctl  simpleInference.ctl
test/anna/testInference/mubar/: realTimeSeqDates.txt  simple.ctl  simpleInference.ctl
test/anna/testInference/mubar/rejection_sim/: makefile  testPrior.c  testPrior_4_tip_asymmetric.c  testPrior_4_tip_symmetric.c
test/anna/testInference/mubar/test_3/: dates.txt  realTimeSeqDates.txt  simple.ctl  simpleInference.ctl
test/anna/testInference/mubar/test_4/: dates.txt  realTimeSeqDates.txt  simple.ctl  simpleInference.ctl
test/anna/testInference/mubar/test_5/: dates.txt  realTimeSeqDates.txt  simple.ctl  simpleInference.ctl
test/anna/testInference/mubar/test_6/: dates.txt  simple.ctl  simpleInference.ctl
test/anna/testInference/tau/4tip_1/: dates.txt  simpleInference2.ctl
test/anna/testInference/tau/4tip_2/: simpleInference2.ctl
test/anna/testInference/tau/4tip_3/: simpleInference2.ctl
test/anna/testInference/tau/4tip_4/: dates.txt  simple2.ctl  simpleInference2.ctl
test/anna/testInference/tau/4tip_asymmetric/: dates.txt  simple2.ctl  simpleInference2.ctl
test/anna/testInference/tau/4tip_asymmetric2/: simpleInference2.ctl
test/anna/testInference/tau/testTauPrior/: makefile  testPrior.c  testPriorAsymmetric.c
test/chi/: bm.R  mk.nex  test.Imap.txt  test.ctl  test.morph.txt  test.seq.txt
test/mig_delimit_test/: infer_delimit_mig.ctl  sim.Imap.txt  sim.ctl  sim_highmig.ctl  sim_veryhighmig.ctl
test/testbed/: description.txt
test/testbed/small/1/data/: bpp.ctl
test/testbed/small/1/ref/: FigTree.tre  mcmc.txt  out.txt
test/testbed/small/10/data/: bpp.ctl
test/testbed/small/10/ref/: FigTree.tre  mcmc.txt  out.txt
test/testbed/small/100/data/: bpp.ctl
test/testbed/small/100/ref/: mcmc.txt  out.txt
test/testbed/small/101/data/: bpp.ctl
test/testbed/small/101/ref/: mcmc.txt  out.txt
test/testbed/small/102/data/: bpp.ctl
test/testbed/small/102/ref/: out.txt
test/testbed/small/103/data/: bpp.ctl
test/testbed/small/103/ref/: out.txt
test/testbed/small/104/data/: bpp.ctl
test/testbed/small/104/ref/: out.txt
test/testbed/small/105/data/: bpp.ctl
test/testbed/small/105/ref/: mcmc.txt  out.txt
test/testbed/small/106/data/: bpp.ctl
test/testbed/small/106/ref/: mcmc.txt  out.txt
test/testbed/small/107/data/: bpp.ctl
test/testbed/small/107/ref/: mcmc.txt  out.txt
test/testbed/small/108/data/: bpp.ctl
test/testbed/small/108/ref/: mcmc.txt  out.txt
test/testbed/small/109/data/: bpp.ctl
test/testbed/small/109/ref/: out.txt
test/testbed/small/11/data/: bpp.ctl
test/testbed/small/11/ref/: FigTree.tre  mcmc.txt  out.txt
test/testbed/small/110/data/: bpp.ctl
test/testbed/small/110/ref/: out.txt
test/testbed/small/111/data/: bpp.ctl
tipDating_doc/: bppTipDating.tex
(+472 files in other folders)
